<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/new_game"
        android:title="@string/new_game_menu" />
    <item
        android:id="@+id/buy_sell"
        android:title="@string/buy_sell_menu" />
    <item
        android:id="@+id/play_card"
        android:title="@string/play_card_menu" />
    <item
        android:id="@+id/end_turn"
        android:title="@string/end_turn_menu" />
    <item
        android:id="@+id/player_report"
        android:title="@string/player_report_menu" />
    <item
        android:id="@+id/played_cards"
        android:title="@string/played_cards_menu" />
    <item
        android:id="@+id/end_report"
        android:title="@string/end_report_menu" />
    <item
        android:id="@+id/help"
        android:title="@string/help_menu" />
    <item
        android:id="@+id/about"
        android:title="@string/about_menu" />
    <item
        android:id="@+id/exitt"
        android:title="@string/exit_menu" />

</menu>
